// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Edit Test: After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "myText",
        "id": 0,
        "myVal": 420,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: Before submit patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "myText",
        "id": 0,
        "myVal": 420,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: Before submit patch 2`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: after create 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      guestName
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="myText"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      myVal
    </label>
    <input
      onChange={[Function]}
      type="number"
      value={420}
    />
  </div>
  <button
    onClick={[Function]}
  >
    Save Changes
  </button>
</div>
`;

exports[`DbStore Edit Test: after edit getorig 1`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: after purposely set invalid err 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      guestName
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="changed"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      myVal
    </label>
    <input
      onChange={[Function]}
      type="number"
      value={240}
    />
  </div>
  <button
    onClick={[Function]}
  >
    Save Changes
  </button>
  <div
    className="notification is-success"
  >
    Successfully saved changes to 
    0
  </div>
</div>
`;

exports[`DbStore Edit Test: after submitted patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: after successfull save 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      guestName
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="changed"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      myVal
    </label>
    <input
      onChange={[Function]}
      type="number"
      value={240}
    />
  </div>
  <button
    onClick={[Function]}
  >
    Save Changes
  </button>
  <div
    className="notification is-success"
  >
    Successfully saved changes to 
    0
  </div>
</div>
`;

exports[`DbStore Edit Test: before set by getorig 1`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": undefined,
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: prefix After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "currentlyEditing": 1,
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
      "1": Object {
        "guestName": "secondOBJ",
        "id": 1,
        "myVal": 24,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
    "1": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel": undefined,
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
    "undefined1": null,
  },
}
`;

exports[`DbStore Edit Test: prefix after edit getorig 1`] = `
Object {
  "errors": Object {
    "0": undefined,
    "formModel0": Object {
      "got": "err",
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "loading": Object {
    "0": false,
    "formModel": false,
    "formModel0": false,
  },
}
`;

exports[`DbStore Edit Test: prefix before set by getorig 1`] = `
Object {
  "errors": Object {
    "0": undefined,
    "formModel0": Object {
      "got": "err",
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": undefined,
  },
  "loading": Object {
    "0": false,
    "formModel": false,
    "formModel0": false,
  },
}
`;

exports[`DbStore Edit Test: prefix result of edit fetch 1`] = `undefined`;

exports[`DbStore Edit Test: result of edit fetch 1`] = `undefined`;

exports[`DbStore Edit Test: updated record 1`] = `
Object {
  "guestName": "changed",
  "id": 0,
  "myVal": 240,
}
`;

exports[`DbStore Edit Test: while loading 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      guestName
    </label>
    <input
      onChange={[Function]}
      type="text"
      value="changed"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="label"
    >
      myVal
    </label>
    <input
      onChange={[Function]}
      type="number"
      value={240}
    />
  </div>
  <button
    onClick={[Function]}
  >
    Save Changes
  </button>
  <div
    className="notification is-success"
  >
    Successfully saved changes to 
    0
  </div>
</div>
`;
